--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "core-js": "^3.4.3",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.2",
     "vue-router": "^3.1.3",
@@ -19,7 +20,7 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-service": "^4.2.3",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.2",
