--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "now-build": "npm run build" 
+    "now-build": "npm run build"
   },
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "core-js": "^3.4.3",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "kind-of": "^6.0.3",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.2",
